# me169_nasaugv

./: .gitignore  README.md
bot_description/: CMakeLists.txt  package.xml
bot_description/launch/: display.launch
bot_description/urdf/: bot.urdf  bot_front_caster.urdf  bot_front_wheels.urdf
depthtolaserscan/: CMakeLists.txt
depthtolaserscan/launch/: depthcamcal.launch  depthcamcal_distance.launch  depthcamcal_horizon.launch  depthcamcal_system.launch  laserscan.launch  rviz.launch
depthtolaserscan/rviz/: laserscan.rviz
depthtolaserscan/scripts/: depthcamcal.py  depthcamcal_distance.py  depthcamcal_horizon.py  depthcamcal_utilities.py
depthtolaserscan/src/: depthtolaserscan.cpp
gme169/: package.xml
gme169/launch/: robot_core.launch  robotstate.launch
gme169/scripts/exploration/: exploration.py  exploration2.py
gme169/scripts/localplanning/: drive_planners.py  simpledriver.py
gme169/scripts/odometry/: teleop.py
gme169/scripts/planning/: planar_transform.py  planner.py  planning_algorithms.py  planning_util.py
gme169/scripts/pose/: map_pose.py
matlab/: bagmsgs.m  jointstatedata.m  plotwheeldata.m  rosbagmsgs.m
me169/: README.md  package.xml
me169/launch/: odom.launch  robot.launch  robot_core.launch  rviz.launch  viewodometry.launch
me169/scripts/localization/: PlanarTransform.py  corrections.py  localization.py
me169/scripts/localplanning/: simpledriver.py  simpledriver_odom.py
me169/scripts/mapping/: mapping.py  occupancy_map.py
me169_shared/rviz/: odometry.rviz
scripts/: wheelcontrol.py
scripts/odometry/: teleop.py
(+15 files in other folders)
